KAW-7943 Fix mobile veiw on Safari

--- a/blocks/highlight/highlight.css
+++ b/blocks/highlight/highlight.css
@@ -31,6 +31,7 @@ picture::after {
 .highlight picture img {
   object-fit: cover;
   width: 100%;
+  height: 100%;
 }
 
 .highlight.block .highlight-slides-wrapper {
